# advent-of-code

2024/: Cargo.toml
2024/1/: main.rs
2024/2/: main.rs
2024/3/: main.rs
2024/4/: main.rs
2024/7/: main.rs
2024/8/: main.rs
2024/load-cargo/: main.rs
