[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.1"

[[bin]]
name = "2"
path = "2/main.rs"

[[bin]]
name = "4"
path = "4/main.rs"

[[bin]]
name = "load-cargo"
path = "load-cargo/main.rs"

[[bin]]
name = "8"
path = "8/main.rs"

[[bin]]
name = "1"
path = "1/main.rs"

[[bin]]
name = "7"
path = "7/main.rs"

[[bin]]
name = "3"
path = "3/main.rs"

